# chat-daddy

./: .gitignore  AGENTS.md  BACKLOG.md  Cargo.toml  LLAMA_ENDPOINTS.md  README.md
.github/workflows/: release.yml
blogs/: 01-origin-story.md  02-feature-evolution.md  03-lan-sync-vision.md  04-bare-metal-philosophy.md  05-llm-first-distribution.md
src/: font.rs  main.rs
themes/: catppuccin.json  dracula.json  gruvbox.json  light.json  midnight.json  monokai.json  nord.json  rose-pine.json  solarized-dark.json  tokyo-night.json
