[package]
name = "chat-daddy"
version = "0.3.3"
edition = "2021"
description = "Minimal terminal-style viewer for Claude/Cursor chat transcript JSONL"

[dependencies]
arboard = "3"
chrono = "0.4"
fontdue = "0.9"
image = "0.25.9"
minifb = "0.28"
raw-window-handle = "0.6"
serde_json = "1.0"
ureq = "2"

[build-dependencies]
winresource = "0.1"
